# nyc-tlc-data-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_REPORT.md  LICENSE  README.md  docker-compose.dashboard.yml  docker-compose.yml  docker-entrypoint.sh  nyx-tlc-data-platform.xml  pyproject.toml  repomix-output.xml  repomix.config.json
.streamlit/: config.toml
config/: app.yml  audit.yml  bronze.yml  dashboard.yml  gold.yml  ml.yml  schema_contracts.yml  silver.yml  tlc_sources.yml
dashboard/: config.py  streamlit_app.py
dashboard/assets/: styles.css
dashboard/components/: filters.py  layout.py  page_common.py  styles.py
dashboard/data_access/: audit_repository.py  jsonl_audit_repository.py  manifest_repository.py  parquet_repository.py
dashboard/pages/: 01_Panorama_Ejecutivo.py  02_Movilidad_Geografica.py  03_Perfil_Temporal.py  04_Rentabilidad_Tarifas.py  05_Eficiencia_Operacional.py  06_Competencia_Cobertura.py  07_Pronostico_Demanda.py  08_Segmentacion_Zonas.py  09_Riesgo_Espera_HVFHV.py  10_Auditoria_Pipeline.py
docs/: audit-model.md  bronze-architecture.md  execution-guide.md  ingestion-strategy.md  silver-architecture.md  silver-data-dictionary.md  silver-data-quality.md  silver-execution-guide.md
notebooks/: 00_environment_validation.ipynb  01_bronze_plan.ipynb  02_execute_historical_bronze.ipynb  03_execute_incremental_2026.ipynb  04_silver_plan.ipynb  05_execute_historical_silver.ipynb  06_execute_incremental_silver.ipynb  07_refresh_silver_references.ipynb
scripts/: configure-wsl.ps1  run-all.ps1
tests/: conftest.py
(+123 files in other folders)
