[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-tlc-data-platform"
version = "1.1.0"
description = "End-to-end NYC TLC data platform built with PySpark and MongoDB, featuring automated Medallion pipelines, data auditing, dimensional modeling, BI dashboards, and predictive models."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "beautifulsoup4>=4.13,<5",
  "pyarrow>=18,<22",
  "pymongo>=4.10,<5",
  "pyspark>=4.0,<4.2",
  "PyYAML>=6.0,<7",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
]

[project.scripts]
tlc-platform = "tlc_data_platform.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
